--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2020": true
+        "es2020": true,
+        "commonjs": true
     },
     "extends": [
         "plugin:@typescript-eslint/eslint-recommended",
