--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "antd": "^4.6.2",
     "axios": "^0.20.0",
+    "bizcharts": "^4.0.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
