--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
     "typescript": "^4.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
