--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "rules": {
         "semi": "off",
-        "space-before-function-paren": "off"
+        "space-before-function-paren": "off",
+        "react/prop-types": "off"
     }
 }
